# tim-tex

./: CMakeLists.txt  README.md  test.c
src/: CMakeLists.txt  main.cpp
src/gui/: Console.cpp  Console.h  Editor.cpp  Editor.h  EditorWindow.cpp  EditorWindow.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  Preview.cpp  Preview.h  ProjectTree.cpp  ProjectTree.h  ToolBar.cpp  ToolBar.h
src/ui/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  MenuBar.h
